Ajout de système solaire

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Expletus+Sans&display=swap');
+    </style>
+
+    <link rel="stylesheet" href="./style.css">
+
+    <title>Billy Ronico</title>
 </head>
+
 <body>
-    <h1>Site de Billy en préparation</h1>
+
+    <section id="home-page">
+        <div id="div-image">
+            <img src="./images/pdp.jpeg" alt="Photo de profil">
+        </div>
+        <h1>Billy Ronico</h1>
+        <h2>Etudiant en informatique</h2>
+    </section>
+
 </body>
+
 </html>
