--- a/site-statique/bienvenue-tokyo/index.html
+++ b/site-statique/bienvenue-tokyo/index.html
@@ -33,6 +33,8 @@
 
         <h2>Activités</h2>
 
+        <div class="trait"></div>
+
         <div class="asym">
             <div class="content-text content-text-1">
                 <div class="content-exact-text">
@@ -53,7 +55,7 @@
         <div class="asym">
             <div class="content-text content-text-2">
                 <div class="content-exact-text content-exact-text-2">
-                    <h2>Visitez des temples</h2>
+                    <h2>Visitez des chateux</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam, hic tempore
                         voluptatibus eos explicabo earum libero accusamus consequuntur nisi sint modi harum in ea error,
@@ -70,7 +72,7 @@
         <div class="asym">
             <div class="content-text content-text-3">
                 <div class="content-exact-text">
-                    <h2>Visitez des chateaux</h2>
+                    <h2>Des beaux festivals</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore laboriosam, hic tempore
                         voluptatibus eos explicabo earum libero accusamus consequuntur nisi sint modi harum in ea error,
@@ -82,6 +84,125 @@
                 </div>
             </div>
             <div class="asym-img asym-img-3"></div>
+        </div>
+
+    </section>
+
+    <section class="parallax">
+        <h2>冒険に行く</h2>
+        <p>Partez à l'aventure</p>
+    </section>
+
+    <section id="tarifs">
+
+        <h2>Laissez-vous guider...</h2>
+
+        <div class="trait"></div>
+
+        <div class="grid-card">
+
+            <a class="card card1">
+
+                <div class="card-header">
+                    <h2 class="type-tarifs">Classique</h2>
+                    <h3 class="prix-tarifs">100€</h3>
+                </div>
+
+                <div class="card-body">
+                    <ul>
+                        <li>✔️ Visite des chateux</li>
+                        <li>✔️ Visite de la ville</li>
+                        <li>✔️ Spéctacle folklorique</li>
+                        <li>❌ Restaurant typique d'éxception</li>
+                        <li>❌ Visite culturelle sur plusieurs jours</li>
+                        <li>❌ Accès privé à des lieux grandioses</li>
+                    </ul>
+                </div>
+
+                <div class="card-footer">
+                    <button>Reserver un guide</button>
+                </div>
+
+            </a>
+
+            <a class="card card2">
+
+                <div class="card-header">
+                    <h2 class="type-tarifs">Découverte</h2>
+                    <h3 class="prix-tarifs">250€</h3>
+                </div>
+
+                <div class="card-body">
+                    <ul>
+                        <li>✔️ Visite des chateux</li>
+                        <li>✔️ Visite de la ville</li>
+                        <li>✔️ Spéctacle folklorique</li>
+                        <li>✔️ Restaurant typique d'éxception</li>
+                        <li>❌ Visite culturelle sur plusieurs jours</li>
+                        <li>❌ Accès privé à des lieux grandioses</li>
+                    </ul>
+                </div>
+
+                <div class="card-footer">
+                    <button>Reserver un guide</button>
+                </div>
+
+            </a>
+
+            <a class="card card3">
+
+                <div class="card-header">
+                    <h2 class="type-tarifs">Excéption</h2>
+                    <h3 class="prix-tarifs">500€</h3>
+                </div>
+
+                <div class="card-body">
+                    <ul>
+                        <li>✔️ Visite des chateux</li>
+                        <li>✔️ Visite de la ville</li>
+                        <li>✔️ Spéctacle folklorique</li>
+                        <li>✔️ Restaurant typique d'éxception</li>
+                        <li>✔️ Visite culturelle sur plusieurs jours</li>
+                        <li>✔️ Accès privé à des lieux grandioses</li>
+                    </ul>
+                </div>
+
+                <div class="card-footer">
+                    <button>Reserver un guide</button>
+                </div>
+
+            </a>
+
+        </div>
+
+    </section>
+
+    <hr style="margin: 70px 0px;">
+
+    <section id="contact">
+
+        <h2>
+            <span style="font-weight: bold;">Rentrons</span> <span style="font-weight: lighter;"> en contact</span>
+        </h2>
+
+        <div class="formulaire">
+
+            <div class="form-prenom form">
+                <span>Entrez votre prénom</span>
+                <input type="text" name="prenom" id="input-prenom" placeholder="Prenom">
+            </div>
+
+            <div class="form-nom form">
+                <span>Entrez votre nom</span>
+                <input type="text" name="nom" id="input-nom" placeholder="nom">
+            </div>
+
+            <div class="form-message form">
+                <textarea name="message" id="input-message" cols="30" rows="10" placeholder="Votre message"></textarea>
+            </div>
+
+            <button class="btn-envoyer">Envoyer</button>
+
         </div>
 
     </section>
