--- a/site-statique/bienvenue-tokyo/index.html
+++ b/site-statique/bienvenue-tokyo/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./sal.css">
     <link rel="stylesheet" href="./style.css">
 
     <title>Découvreé Kyoto</title>
@@ -36,7 +37,7 @@
         <div class="trait"></div>
 
         <div class="asym">
-            <div class="content-text content-text-1">
+            <div class="content-text content-text-1" data-sal="slide-left" data-sal-delay="300">
                 <div class="content-exact-text">
                     <h2>Visitée des temples</h2>
                     <p>
@@ -53,7 +54,7 @@
         </div>
 
         <div class="asym">
-            <div class="content-text content-text-2">
+            <div class="content-text content-text-2" data-sal="slide-right" data-sal-delay="300">
                 <div class="content-exact-text content-exact-text-2">
                     <h2>Visitez des chateux</h2>
                     <p>
@@ -70,7 +71,7 @@
         </div>
 
         <div class="asym">
-            <div class="content-text content-text-3">
+            <div class="content-text content-text-3" data-sal="slide-left" data-sal-delay="300">
                 <div class="content-exact-text">
                     <h2>Des beaux festivals</h2>
                     <p>
@@ -101,7 +102,7 @@
 
         <div class="grid-card">
 
-            <a class="card card1">
+            <a class="card card1" data-sal="zoom-in" data-sal-delay="300">
 
                 <div class="card-header">
                     <h2 class="type-tarifs">Classique</h2>
@@ -125,7 +126,7 @@
 
             </a>
 
-            <a class="card card2">
+            <a class="card card2" data-sal="zoom-in" data-sal-delay="300">
 
                 <div class="card-header">
                     <h2 class="type-tarifs">Découverte</h2>
@@ -149,11 +150,11 @@
 
             </a>
 
-            <a class="card card3">
+            <a class="card card3" data-sal="zoom-in" data-sal-delay="300">
 
                 <div class="card-header">
                     <h2 class="type-tarifs">Excéption</h2>
-                    <h3 class="prix-tarifs">500€</h3>
+                    <h3 class="prix-tarifs">300€</h3>
                 </div>
 
                 <div class="card-body">
@@ -207,7 +208,9 @@
 
     </section>
 
-    <script src="./app.js"></script>
+    <script src="./sal.js"></script>
+    <script type="module" src="./app.js"></script>
+
 </body>
 
 </html>
