--- a/30-jours-code/3-card-basics-2/index.html
+++ b/30-jours-code/3-card-basics-2/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <main class="xl:w-screen xl:h-screen my-16 flex justify-center items-center text-white">
+    <main class="xl:h-screen xl:m-0 my-16 flex justify-center items-center text-white">
         <section class="content-carte grid grid-rows-3 grid-cols-1 xl:grid-rows-1 xl:grid-cols-3">
             <section class="carte carte-1 bg-color-carte-1">
                 <img src="./images/icon-sedans.svg" alt="icon-company" class="w-16">
