Ajout de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h2>Site Statique</h2>
     <ul>
         <li>
-            <a href="https://billyronico412.github.io/site-statique/agence-immobilliere">Agence Immobilière</a>    
+            <a href="./site-statique/agence-immobilliere">Agence Immobilière</a>    
         </li>
         <li>
-            <a href="https://billyronico412.github.io/site-statique/bienvenue-tokyo">Kyoto</a>
+            <a href="./site-statique/bienvenue-tokyo">Kyoto</a>
         </li>
     </ul>
 
@@ -22,19 +22,19 @@
 
     <ol>
         <li>
-            <a href="https://billyronico412.github.io/30-jours-code/1-calculatrice">Calculatrice</a>
+            <a href="./30-jours-code/1-Calculatrice">Calculatrice</a>
         </li>
         <li>
-            <a href="https://billyronico412.github.io/30-jours-code/2-card-basics">Carte Basique</a>
+            <a href="./30-jours-code/2-card-basics">Carte Basique</a>
         </li>
         <li>
-            <a href="https://billyronico412.github.io/30-jours-code/3-card-coller">3 Carte</a>
+            <a href="./30-jours-code/3-card-coller">3 Carte</a>
         </li>
         <li>
-            <a href="https://billyronico412.github.io/30-jours-code/4-card-profil">Carte profil</a>
+            <a href="./30-jours-code/4-card-profil">Carte profil</a>
         </li>
         <li>
-            <a href="https://billyronico412.github.io/30-jours-code/5-social-proof">Social proof</a>
+            <a href="./30-jours-code/5-social-proof">Social proof</a>
         </li>
     </ol>
 </body>
