--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <a href="./30-jours-code/2-card-basics">Carte Basique</a>
         </li>
         <li>
-            <a href="./30-jours-code/3-card-coller">3 Carte</a>
+            <a href="./30-jours-code/3-card-coller">3 Cartes</a>
         </li>
         <li>
             <a href="./30-jours-code/4-card-profil">Carte profil</a>
         </li>
         <li>
             <a href="./30-jours-code/5-social-proof">Social proof</a>
+        </li>
+        <li>
+            <a href="./30-jours-code/6-four-card">4 cartes</a>
         </li>
     </ol>
 </body>
