--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <li>
             <a href="./30-jours-code/6-four-card">4 cartes</a>
         </li>
+        <li>
+            <a href="./30-jours-code/7-formulaire-contact">Formulaire de contact</a>
+        </li>
+        <li>
+            <a href="./30-jours-code/8-signle-price-grid/">Grid de prix</a>
+        </li>
     </ol>
 </body>
 </html>
