--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <li>
             <a href="./30-jours-code/8-signle-price-grid/">Grid de prix</a>
         </li>
+        <li>
+            <a href="./30-jours-code/9-landing-page-1/">Landing Page 1</a>
+        </li>
     </ol>
 </body>
 </html>
