--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <li>
             <a href="./30-jours-code/9-landing-page-1/">Landing Page 1</a>
         </li>
+        <li>
+            <a href="./30-jours-code/10-sunny-side-agency/">SunnySide</a>
+        </li>
     </ol>
 </body>
 </html>
