--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li>
             <a href="./30-jours-code/10-sunny-side-agency/">SunnySide</a>
         </li>
+        <li>
+            <a href="./30-jours-code/12-pricing-component-with-toggle/">Carte de prix</a>
+        </li>
     </ol>
 </body>
 </html>
