--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <li>
             <a href="./30-jours-code/12-pricing-component-with-toggle/">Carte de prix</a>
         </li>
+        <li>
+            <a href="./30-jours-code/13-testimonal-grid/">Témoignage</a>
+        </li>
     </ol>
 </body>
 </html>
