--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="./30-jours-code/13-testimonal-grid/">Témoignage</a>
         </li>
         <li>
-            <a href="./30-jours-code/14-social-media-dashboard/">Témoignage</a>
+            <a href="./30-jours-code/14-social-media-dashboard/">Dashbord Social Media</a>
         </li>
     </ol>
 </body>
