--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         <li>
             <a href="./30-jours-code/14-social-media-dashboard/">Dashbord Social Media</a>
         </li>
+        <li>
+            <a href="./30-jours-code/15-job-listing-filtering/">Job Listing Filter</a>
+        </li>
+        <li>
+            <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
+        </li>
     </ol>
 </body>
 </html>
