--- a/30-jours-code/32-projet-marcos-tailwind/index.html
+++ b/30-jours-code/32-projet-marcos-tailwind/index.html
@@ -41,7 +41,7 @@
             </nav>
         </div>
 
-        <div class="content-bg-acceuil h-screen bg-no-repeat bg-cover flex justify-center items-center">
+        <div class="content-bg-acceuil h-screen bg-no-repeat bg-cover flex flex-col justify-center items-center">
             <div class="content-text-acceuil flex flex-col justify-center items-center font-titre border-4 border-gray-text px-0 py-16 bg-green-bg">
                 <h2 class="text-white tracking-wider text-sm sm:text-base md:text-xl lg:text-3xl mb-12 opacity-0">" Vive, les séjours écolos dans les hauts "</h2>
                 <div class="flex">
@@ -62,6 +62,10 @@
                         <div class="mot-2-acceuil opacity-0 mot-2-acceuil-4 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">Culture</div>
                     </div>
                 </div>
+            </div>
+            <div class="relative mt-12 content-arrow">
+                <img src="./images/arrow-down.svg" alt="arrow-down" class="w-16">
+                <img src="./images/arrow-down.svg" alt="arrow-down" class="w-16 absolute -bottom-8">     
             </div>
         </div>
 
