--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <a href="./30-jours-code/15-job-listing-filtering/">Job Listing Filter</a>
         </li>
         <li>
+            <a href="./30-jours-code/16-url-shortening/">Url Shortening</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
