update projet marcos

--- a/30-jours-code/32-projet-marcos-tailwind/index.html
+++ b/30-jours-code/32-projet-marcos-tailwind/index.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Le CLAC est un centre de lecture et d'aninamation culturelle situé au Brûler de la Reunion. 
+    Il y a également l'organisation des séjours de classe de découvertes et des séjours de vacances. ">
     <link rel="stylesheet" href="./output.css">
-    <title>CLAC</title>
+    <title>CLAC - Brûler - Saint-Denis</title>
 </head>
 
 <body>
 
     <header>
 
-        <div class="content-nav bg-black text-white py-4 flex justify-center items-center absolute w-full top-0 left-0 px-8">
+        <div
+            class="content-nav bg-black text-white py-4 flex justify-center items-center absolute w-full top-0 left-0 px-8">
             <nav class="container flex justify-between items-center">
-                <a href="#" class="text-4xl font-titre font-extrabold">
+                <a href="./index.html" class="text-4xl font-titre font-extrabold">
                     <span class="text-green-text">C</span>
                     <span>L</span>
                     <span class="text-green-text">A</span>
@@ -26,54 +29,166 @@
                 </div>
                 <ul class="md:flex font-principal hidden">
                     <li class="px-4">
-                        <a href="#" class="text-gray-text hover:text-white transition">Missions / Activités</a>
+                        <a href="./pages/mission.html" class="text-gray-text hover:text-white transition">Missions /
+                            Activités</a>
                     </li>
                     <li class="px-4">
-                        <a href="#" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                        <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
                     </li>
                     <li class="px-4">
-                        <a href="#" class="text-gray-text hover:text-white transition">Historique</a>
+                        <a href="./pages/historique.html"
+                            class="text-gray-text hover:text-white transition">Historique</a>
                     </li>
                     <li class="pl-4">
-                        <a href="#" class="text-gray-text hover:text-white transition">Dominique Dambreville</a>
+                        <a href="./pages/dominique-dambreville.html"
+                            class="text-gray-text hover:text-white transition">Dominique Dambreville</a>
                     </li>
                 </ul>
             </nav>
         </div>
 
         <div class="content-bg-acceuil h-screen bg-no-repeat bg-cover flex flex-col justify-center items-center">
-            <div class="content-text-acceuil flex flex-col justify-center items-center font-titre border-4 border-gray-text px-0 py-16 bg-green-bg">
-                <h2 class="text-white tracking-wider text-sm sm:text-base md:text-xl lg:text-3xl mb-12 opacity-0">" Vive, les séjours écolos dans les hauts "</h2>
+            <div
+                class="content-text-acceuil flex flex-col justify-center items-center font-titre border-4 border-gray-text px-0 py-16 bg-green-bg">
+                <h2 class="text-white tracking-wider text-sm sm:text-base md:text-xl lg:text-3xl mb-12 opacity-0">"
+                    Vive, les séjours écolos dans les hauts "</h2>
                 <div class="flex">
-                    <div class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
-                        <div class="mot-1-acceuil mot-1-acceuil-1 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">C</div>
-                        <div class="mot-2-acceuil opacity-0 mot-2-acceuil-1 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">Centre</div>
+                    <div
+                        class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
+                        <div
+                            class="mot-1-acceuil mot-1-acceuil-1 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">
+                            C</div>
+                        <div
+                            class="mot-2-acceuil opacity-0 mot-2-acceuil-1 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">
+                            Centre</div>
                     </div>
-                    <div class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
-                        <div class="mot-1-acceuil mot-1-acceuil-2 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">L</div>
-                        <div class="mot-2-acceuil opacity-0 mot-2-acceuil-2 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">Lecture</div>
+                    <div
+                        class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
+                        <div
+                            class="mot-1-acceuil mot-1-acceuil-2 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">
+                            L</div>
+                        <div
+                            class="mot-2-acceuil opacity-0 mot-2-acceuil-2 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">
+                            Lecture</div>
                     </div>
-                    <div class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
-                        <div class="mot-1-acceuil mot-1-acceuil-3 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">A</div>
-                        <div class="mot-2-acceuil opacity-0 mot-2-acceuil-3 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">Animation</div>
+                    <div
+                        class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
+                        <div
+                            class="mot-1-acceuil mot-1-acceuil-3 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">
+                            A</div>
+                        <div
+                            class="mot-2-acceuil opacity-0 mot-2-acceuil-3 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">
+                            Animation</div>
                     </div>
-                    <div class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
-                        <div class="mot-1-acceuil mot-1-acceuil-4 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">C</div>
-                        <div class="mot-2-acceuil opacity-0 mot-2-acceuil-4 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">Culture</div>
+                    <div
+                        class="content-mot-acceuil w-20 sm:w-32 md:w-44 lg:w-48 flex flex-col justify-center items-center">
+                        <div
+                            class="mot-1-acceuil mot-1-acceuil-4 opacity-0 text-gray-text text-3xl sm:text-5xl md:text-6xl lg:text-8xl font-extrabold">
+                            C</div>
+                        <div
+                            class="mot-2-acceuil opacity-0 mot-2-acceuil-4 text-gray-text font-extrabold text-xs sm:text-base md:text-lg lg:text-2xl mt-2 md:mt-1 lg:mt-0 tracking-widest">
+                            Culture</div>
                     </div>
                 </div>
             </div>
-            <div class="relative mt-12 content-arrow">
+            <a href="#description" class="relative mt-12 content-arrow cursor-pointer block">
                 <img src="./images/arrow-down.svg" alt="arrow-down" class="w-16">
-                <img src="./images/arrow-down.svg" alt="arrow-down" class="w-16 absolute -bottom-8">     
-            </div>
+                <img src="./images/arrow-down.svg" alt="arrow-down" class="w-16 absolute -bottom-8">
+            </a>
         </div>
 
     </header>
 
-    <main>
+    <main class="container mx-auto block lg:grid grid-cols-2 gap-x-12 font-principal py-8">
+        <section id="description">
+            <h2 class="text-center">
+                <img src="./images/logo.png" alt="logo" class="block mx-auto">
+            </h2>
+            <p class="text-center font-semibold tracking-wide text-lg mt-6 leading-8 text-gray-700">
+                L'organisation des séjours de classes de découvertes et de séjours de vacances, est faite avec les
+                enseignants
+                volontaires, les animateurs
+                socioculturels, les associations de parents, les mairies, la direction de la jeunesse et des sport,
+                le Rectorat. <br>
+                Le financement des séjours est pris en charge par: les communes, le Conseil Général, les familles,
+                l'OCCE et
+                l'association de parents
+                d'élèves (PEEP).
+            </p>
+        </section>
+        <section class="mt-16 lg:mt-0">
 
+            <div class="w-full rounded-lg border overflow-hidden bg-gray-100 relative">
+                <img src="https://img.icons8.com/material-outlined/50/000000/circled-left--v2.png"
+                    class="absolute top-1/2 left-8 transform -translate-y-1/2 cursor-pointer w-16" />
+                <div>
+                    <div class="bg-img-carousel-description-1 bg-contain bg-no-repeat bg-center img-carousel"></div>
+                    <div class="bg-img-carousel-description-2 bg-contain bg-no-repeat bg-center img-carousel hidden">
+                    </div>
+                    <div class="bg-img-carousel-description-3 bg-contain bg-no-repeat bg-center img-carousel hidden">
+                    </div>
+                    <div class="bg-img-carousel-description-4 bg-contain bg-no-repeat bg-center img-carousel hidden">
+                    </div>
+                    <div class="bg-img-carousel-description-5 bg-contain bg-no-repeat bg-center img-carousel hidden">
+                    </div>
+                    <div class="bg-img-carousel-description-6 bg-contain bg-no-repeat bg-center img-carousel hidden">
+                    </div>
+                </div>
+                <img src="https://img.icons8.com/material-outlined/50/000000/circled-right--v2.png"
+                    class="absolute top-1/2 right-8 transform -translate-y-1/2 cursor-pointer w-16" />
+
+            </div>
+
+        </section>
     </main>
+
+    <footer
+        class="bg-black text-white flex justify-around items-center py-8 text-gray-text tracking-wide font-semibold leading-7">
+
+        <div>
+            <img src="./images/logo.png" alt="logo" class="w-16">
+        </div>
+
+        <div>
+            9 Chemin Des Frangipaniers <br>
+            Le brûler <br>
+            Saint-Denis <br>
+            97400
+        </div>
+
+        <div>
+
+            <ul>
+                <li class="px-4">
+                    <a href="./pages/mission.html" class="text-gray-text hover:text-white transition">Missions /
+                        Activités</a>
+                </li>
+                <li class="px-4">
+                    <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                </li>
+                <li class="px-4">
+                    <a href="./pages/historique.html" class="text-gray-text hover:text-white transition">Historique</a>
+                </li>
+                <li class="pl-4">
+                    <a href="./pages/dominique-dambreville.html"
+                        class="text-gray-text hover:text-white transition">Dominique Dambreville</a>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <ul>
+                <li>
+                    <a href="tel:0262200388">0262200388</a>
+                </li>
+                <li>
+                    <a href="mailto:secretariat@ccl.re">secretariat@ccl.re</a>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
+
 
 </body>
 
