--- a/30-jours-code/32-projet-marcos-tailwind/pages/mission.html
+++ b/30-jours-code/32-projet-marcos-tailwind/pages/mission.html
@@ -34,11 +34,8 @@
                     <li class="px-4">
                         <a href="./objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
                     </li>
-                    <li class="px-4">
-                        <a href="./historique.html" class="text-gray-text hover:text-white transition">Historique</a>
-                    </li>
                     <li class="pl-4">
-                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Dominique Dambreville</a>
+                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Diréctrice</a>
                     </li>
                 </ul>
             </nav>
