--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <a href="./30-jours-code/16-url-shortening/">Url Shortening</a>
         </li>
         <li>
+            <a href="./30-jours-code/17-rest-countries-api/">Rest countries API</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
