--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <a href="./30-jours-code/17-rest-countries-api/">Rest countries API</a>
         </li>
         <li>
+            <a href="./30-jours-code/18-clipboard-landing-page/">Clipboard Landing Page</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
