--- a/30-jours-code/32-projet-marcos-tailwind/pages/historique.html
+++ b/30-jours-code/32-projet-marcos-tailwind/pages/historique.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Le CLAC est un centre de lecture et d'aninamation culturelle situé au Brûler de la Reunion. 
     Il y a également l'organisation des séjours de classe de découvertes et des séjours de vacances. ">
     <link rel="stylesheet" href="../output.css">
-    <title>CLAC - Brûler - Saint-Denis</title>
+    <title>CLAC - Brûlé - Saint-Denis</title>
 </head>
 
 <body>
@@ -32,10 +32,10 @@
                         <a href="./mission.html" class="text-gray-text hover:text-white transition">Missions / Activités</a>
                     </li>
                     <li class="px-4">
-                        <a href="./objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                        <a href="./objectif.html" class="text-gray-text hover:text-white transition">Pourquoi ?</a>
                     </li>
                     <li class="pl-4">
-                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Directrice</a>
+                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Une oeuvre, un auteur</a>
                     </li>
                 </ul>
             </nav>
