--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
             <a href="./30-jours-code/18-clipboard-landing-page/">Clipboard Landing Page</a>
         </li>
         <li>
+            <a href="./30-jours-code/19-chap-app-landing-page/">Chat App Landing Page</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
