--- a/30-jours-code/32-projet-marcos-tailwind/index.html
+++ b/30-jours-code/32-projet-marcos-tailwind/index.html
@@ -33,11 +33,11 @@
                             Activités</a>
                     </li>
                     <li class="px-4">
-                        <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                        <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Pourquoi?</a>
                     </li>
                     <li class="pl-4">
                         <a href="./pages/dominique-dambreville.html"
-                            class="text-gray-text hover:text-white transition">Directrice</a>
+                            class="text-gray-text hover:text-white transition">Une oeuvre, un auteur</a>
                     </li>
                 </ul>
             </nav>
@@ -154,8 +154,8 @@
         </div>
 
         <div class=" mt-8 lg:mt-0 text-center lg:text-left">
-            9 Chemin Des Frangipaniers <br>
-            Le brûler <br>
+            9 Chemin des Frangipaniers <br>
+            Le brûlé <br>
             Saint-Denis <br>
             97400
         </div>
@@ -168,11 +168,11 @@
                         Activités</a>
                 </li>
                 <li class="px-4">
-                    <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                    <a href="./pages/objectif.html" class="text-gray-text hover:text-white transition">Pourquoi?</a>
                 </li>
                 <li class="pl-4">
                     <a href="./pages/dominique-dambreville.html"
-                        class="text-gray-text hover:text-white transition">Directrice</a>
+                        class="text-gray-text hover:text-white transition">Une oeuvre, un auteur</a>
                 </li>
             </ul>
         </div>
