--- a/30-jours-code/32-projet-marcos-tailwind/pages/objectif.html
+++ b/30-jours-code/32-projet-marcos-tailwind/pages/objectif.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Le CLAC est un centre de lecture et d'aninamation culturelle situé au Brûler de la Reunion. 
     Il y a également l'organisation des séjours de classe de découvertes et des séjours de vacances. ">
     <link rel="stylesheet" href="../output.css">
-    <title>CLAC - Brûler - Saint-Denis</title>
+    <title>CLAC - Brûlé - Saint-Denis</title>
 </head>
 
 <body>
@@ -32,10 +32,10 @@
                         <a href="./mission.html" class="text-gray-text hover:text-white transition">Missions / Activités</a>
                     </li>
                     <li class="px-4">
-                        <a href="./objectif.html" class="text-gray-text hover:text-white transition">Objéctifs</a>
+                        <a href="./objectif.html" class="text-gray-text hover:text-white transition">Pourquoi ?</a>
                     </li>
                     <li class="pl-4">
-                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Directrice</a>
+                        <a href="./dominique-dambreville.html" class="text-gray-text hover:text-white transition">Une oeuvre, un auteur</a>
                     </li>
                 </ul>
             </nav>
@@ -45,21 +45,14 @@
 
     <main id="objectif">
 
-        <h1> Objectif:</h1>
+        <h1>Pourquoi?</h1>
         <ol>
             <li>Favoriser le vivre ensemble: parents, maîtres, enfants pour renforcer les liens grâce à l'internat.</li>
             <li>Découvrir la faune, la flore, l'habitat et l'homme dans l'environnement.</li>
             <li>Faire l'expérience de l'écriture de textes longs.</li>
-            <li>Développer une culture scientifique et technologique.</li>
+            <li>Développer une culture scientifique et technologique.</li>  
+            <li>Pour décuvrir la littérature de la jeunesse et la littérature générale et plus particulièrement le fonds régional.</li>
         </ol>
-    
-        <h2> Moyens: (visite, matériels, activités)</h2>
-        <ul>
-            <li>ouvrages pour la jeunesse et la littérature générale et plus particulièrement le fonds régional.</li>
-            <li>Etudier le village dans une démarche d'exploration et d'appropriation d'un milieu différent et comparer avec
-                celui de son quartier.</li>
-            <li>Films, articles de presse, documentaire.</li>
-        </ul>
 
     </main>
 
