--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             <a href="./30-jours-code/19-chap-app-landing-page/">Chat App Landing Page</a>
         </li>
         <li>
+            <a href="./30-jours-code/20-flyo-dark-theme/">Flyo Dark Theme</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
