--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
             <a href="./30-jours-code/20-flyo-dark-theme/">Flyo Dark Theme</a>
         </li>
         <li>
+            <a href="./30-jours-code/21-e-commerce-product-page/">E Commerce Product Page</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
