--- a/30-jours-code/21-e-commerce-product-page/index.html
+++ b/30-jours-code/21-e-commerce-product-page/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./output.css">
 
-    <title>Frontend Mentor | E-commerce product page</title>
+    <title>E-commerce product page</title>
 
 </head>
 <body>
