--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             <a href="./30-jours-code/21-e-commerce-product-page/">E Commerce Product Page</a>
         </li>
         <li>
+            <a href="./30-jours-code/22-tic-tac-toe/">Tic Tac Toe</a>
+        </li>
+        <li>
             <a href="./30-jours-code/32-projet-marcos-tailwind/">Projet Marcos</a>
         </li>
     </ol>
